[package]
name = "kamino_lending"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kamino_lending"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
staging = []

[dependencies]
anchor-lang = { workspace = true }
